bela: disable bb-usb-gadgets and grow partition

--- a/configs/bela.io-debian-bookworm-iot-v6.12-ti-arm64-k3-am62.conf
+++ b/configs/bela.io-debian-bookworm-iot-v6.12-ti-arm64-k3-am62.conf
@@ -156,7 +156,6 @@ repo_rcnee_pkg_list="	\
 	bbb.io-keyring	\
 	bb-beagle-version	\
 	bb-customizations	\
-	bb-usb-gadgets	\
 	bb-u-boot-pocketbeagle2	\
 	bb-wl18xx-firmware	\
 	bb-wlan0-defaults	\
@@ -175,4 +174,6 @@ chroot_COPY_SETUP_SDCARD="enable"
 chroot_script="bela.io-bookworm-arm64.sh"
 #chroot_tarball="enable"
 keep_ssh_keys="enable"
-rfs_disable_grow_partition="enable"
+
+rfs_disable_grow_partition="enable" # automatic partition growing is a pain. Let the user do it intentionally.
+rfs_disable_usb_gadgets="enable" # we provide our own
