--- a/configs/bela.io-debian-bookworm-iot-v6.12-ti-arm64-k3-am62.conf
+++ b/configs/bela.io-debian-bookworm-iot-v6.12-ti-arm64-k3-am62.conf
@@ -102,6 +102,7 @@ deb_include="	\
 	distcc \
 	manpages-dev \
 	libasound2-dev \
+	libsndfile1-dev \
 	libreadline-dev \
 	libne10-dev \
 	screen \
