bela: customisations of hwpack

--- a/tools/hwpack/bela-pocketbeagle2.conf
+++ b/tools/hwpack/bela-pocketbeagle2.conf
@@ -28,6 +28,11 @@ extlinux_compressed_kernel="vmlinuz"
 extlinux_just_compressed_kernel="enable"
 extlinux_dtb_vendor="ti"
 extlinux_dtb_fam="k3-am62"
+extlinux_timeout="1"
+extlinux_overlays="/overlays/PB2-BELA.dtbo /overlays/PB2-I2C-GPIO.dtbo"
+
+conf_dtb_source=/opt/source/dtb-6.12-Beagle/src/arm64/ti
+conf_dtbo_source=/opt/source/dtb-6.12-Beagle/src/arm64/overlays
 
 #Flasher
 flasher_script="/opt/u-boot/bb-u-boot-pocketbeagle2/pb2-microsd-to-emmc-w-swap"
