bela: use deb_cache

--- a/configs/bela.io-debian-bookworm-iot-v6.12-ti-arm64-k3-am62.conf
+++ b/configs/bela.io-debian-bookworm-iot-v6.12-ti-arm64-k3-am62.conf
@@ -11,6 +11,7 @@ deb_distribution="debian"
 deb_codename="bookworm"
 deb_arch="arm64"
 deb_mirror=""
+deb_cache=~/deb_cache
 deb_components="main contrib non-free non-free-firmware"
 #
 ##
