--- a/configs/bela.io-debian-bookworm-iot-v6.12-ti-arm64-k3-am62.conf
+++ b/configs/bela.io-debian-bookworm-iot-v6.12-ti-arm64-k3-am62.conf
@@ -174,6 +174,7 @@ repo_rcnee_pkg_list="	\
 ##
 chroot_COPY_SETUP_SDCARD="enable"
 chroot_script="bela.io-bookworm-arm64.sh"
+#chroot_backup_before=1
 #chroot_tarball="enable"
 keep_ssh_keys="enable"
 
