bela: Conditionally select apt_proxy on CI or deb_cache otherwise

--- a/configs/bela.io-debian-bookworm-iot-v6.12-ti-arm64-k3-am62.conf
+++ b/configs/bela.io-debian-bookworm-iot-v6.12-ti-arm64-k3-am62.conf
@@ -11,7 +11,15 @@ deb_distribution="debian"
 deb_codename="bookworm"
 deb_arch="arm64"
 deb_mirror=""
-deb_cache=~/deb_cache
+
+if [ x"$CI" == "x1" ]; then
+	deb_cache=
+	apt_proxy=192.168.1.10:3142/
+else
+	deb_cache=~/deb_cache
+	apt_proxy=
+fi
+
 deb_components="main contrib non-free non-free-firmware"
 #
 ##
